// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus > 1. forty-tools — grouping caps the rows; plan stays O(groups); keys stable 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "run the batch",
    },
    {
      "expanded": false,
      "failureBadge": null,
      "failureCount": 0,
      "key": "g.tool.t1",
      "kind": "tool-group",
      "label": "Ran 40 tools",
      "tools": [
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t1",
          "kind": "tool",
          "name": "step_1",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t1.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 1",
          "toolCallId": "t1",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t2",
          "kind": "tool",
          "name": "step_2",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t2.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 2",
          "toolCallId": "t2",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t3",
          "kind": "tool",
          "name": "step_3",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t3.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 3",
          "toolCallId": "t3",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t4",
          "kind": "tool",
          "name": "step_4",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t4.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 4",
          "toolCallId": "t4",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t5",
          "kind": "tool",
          "name": "step_5",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t5.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 5",
          "toolCallId": "t5",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t6",
          "kind": "tool",
          "name": "step_6",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t6.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 6",
          "toolCallId": "t6",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t7",
          "kind": "tool",
          "name": "step_7",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t7.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 7",
          "toolCallId": "t7",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t8",
          "kind": "tool",
          "name": "step_8",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t8.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 8",
          "toolCallId": "t8",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t9",
          "kind": "tool",
          "name": "step_9",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t9.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 9",
          "toolCallId": "t9",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t10",
          "kind": "tool",
          "name": "step_10",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t10.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 10",
          "toolCallId": "t10",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t11",
          "kind": "tool",
          "name": "step_11",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t11.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 11",
          "toolCallId": "t11",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t12",
          "kind": "tool",
          "name": "step_12",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t12.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 12",
          "toolCallId": "t12",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t13",
          "kind": "tool",
          "name": "step_13",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t13.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 13",
          "toolCallId": "t13",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t14",
          "kind": "tool",
          "name": "step_14",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t14.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 14",
          "toolCallId": "t14",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t15",
          "kind": "tool",
          "name": "step_15",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t15.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 15",
          "toolCallId": "t15",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t16",
          "kind": "tool",
          "name": "step_16",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t16.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 16",
          "toolCallId": "t16",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t17",
          "kind": "tool",
          "name": "step_17",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t17.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 17",
          "toolCallId": "t17",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t18",
          "kind": "tool",
          "name": "step_18",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t18.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 18",
          "toolCallId": "t18",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t19",
          "kind": "tool",
          "name": "step_19",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t19.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 19",
          "toolCallId": "t19",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t20",
          "kind": "tool",
          "name": "step_20",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t20.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 20",
          "toolCallId": "t20",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t21",
          "kind": "tool",
          "name": "step_21",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t21.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 21",
          "toolCallId": "t21",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t22",
          "kind": "tool",
          "name": "step_22",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t22.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 22",
          "toolCallId": "t22",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t23",
          "kind": "tool",
          "name": "step_23",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t23.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 23",
          "toolCallId": "t23",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t24",
          "kind": "tool",
          "name": "step_24",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t24.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 24",
          "toolCallId": "t24",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t25",
          "kind": "tool",
          "name": "step_25",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t25.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 25",
          "toolCallId": "t25",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t26",
          "kind": "tool",
          "name": "step_26",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t26.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 26",
          "toolCallId": "t26",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t27",
          "kind": "tool",
          "name": "step_27",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t27.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 27",
          "toolCallId": "t27",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t28",
          "kind": "tool",
          "name": "step_28",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t28.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 28",
          "toolCallId": "t28",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t29",
          "kind": "tool",
          "name": "step_29",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t29.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 29",
          "toolCallId": "t29",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t30",
          "kind": "tool",
          "name": "step_30",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t30.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 30",
          "toolCallId": "t30",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t31",
          "kind": "tool",
          "name": "step_31",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t31.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 31",
          "toolCallId": "t31",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t32",
          "kind": "tool",
          "name": "step_32",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t32.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 32",
          "toolCallId": "t32",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t33",
          "kind": "tool",
          "name": "step_33",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t33.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 33",
          "toolCallId": "t33",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t34",
          "kind": "tool",
          "name": "step_34",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t34.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 34",
          "toolCallId": "t34",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t35",
          "kind": "tool",
          "name": "step_35",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t35.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 35",
          "toolCallId": "t35",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t36",
          "kind": "tool",
          "name": "step_36",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t36.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 36",
          "toolCallId": "t36",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t37",
          "kind": "tool",
          "name": "step_37",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t37.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 37",
          "toolCallId": "t37",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t38",
          "kind": "tool",
          "name": "step_38",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t38.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 38",
          "toolCallId": "t38",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t39",
          "kind": "tool",
          "name": "step_39",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t39.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 39",
          "toolCallId": "t39",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t40",
          "kind": "tool",
          "name": "step_40",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t40.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 40",
          "toolCallId": "t40",
        },
      ],
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "All done.",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 2. midstream-tool-failure — failed inline; badge without unroll 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "sweep it",
    },
    {
      "expanded": false,
      "failureBadge": "1 failed",
      "failureCount": 1,
      "key": "g.tool.t1",
      "kind": "tool-group",
      "label": "Ran 5 tools",
      "tools": [
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t1",
          "kind": "tool",
          "name": "step_1",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t1.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 1",
          "toolCallId": "t1",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t2",
          "kind": "tool",
          "name": "step_2",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t2.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 2",
          "toolCallId": "t2",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t3",
          "kind": "tool",
          "name": "step_3",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t3.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "failed",
          "title": "step 3",
          "toolCallId": "t3",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t4",
          "kind": "tool",
          "name": "step_4",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t4.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 4",
          "toolCallId": "t4",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t5",
          "kind": "tool",
          "name": "step_5",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t5.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "step 5",
          "toolCallId": "t5",
        },
      ],
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Partial results in.",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 3. cold-start — R12 escalation at 0 / 2.5 s / 15 s 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "hi",
    },
  ],
  "recovery": null,
  "status": {
    "copy": "Starting your agent…",
    "detail": null,
    "key": "status",
    "kind": "status",
    "state": "starting",
  },
}
`;

exports[`corpus > 4. consent-gate — pending grant-mode card → answered one-line collapse (guuey#207 hitl arm) 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "book my usual",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Booked your usual — I couldn't see your profile yet.",
    },
    {
      "ask": {
        "askId": "profile-consent:app-1:thread-corpus",
        "grantModes": [
          {
            "description": "Every conversation with this agent",
            "id": "always",
            "label": "Always allow",
          },
          {
            "description": "Only this conversation",
            "id": "once",
            "label": "Allow this chat",
          },
        ],
        "kind": "approval",
        "message": "Trip Planner wants to read your guuey profile — the notes agents keep about you across apps.",
        "metadata": {
          "appId": "app-1",
          "requested": "read",
        },
      },
      "askKind": "approval",
      "chosenModeId": null,
      "chosenModeLabel": null,
      "expanded": true,
      "grantModes": [
        {
          "description": "Every conversation with this agent",
          "id": "always",
          "label": "Always allow",
        },
        {
          "description": "Only this conversation",
          "id": "once",
          "label": "Allow this chat",
        },
      ],
      "key": "p.profile-consent:app-1:thread-corpus",
      "kind": "prompt",
      "message": "Trip Planner wants to read your guuey profile — the notes agents keep about you across apps.",
      "oauth": null,
      "promptId": "profile-consent:app-1:thread-corpus",
      "promptKind": "hitl",
      "raw": null,
      "state": "pending",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 5. bypass-text-only — plan identical to a silver text-only stream 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "hey",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Hello!",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 7. view-never-handshakes — channel-aware labels on both channels 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "show me",
    },
    {
      "argsPreview": null,
      "attribution": true,
      "expanded": false,
      "key": "tool.tInline",
      "kind": "tool",
      "name": "render_form",
      "result": null,
      "state": "done",
      "title": "render form",
      "toolCallId": "tInline",
    },
    {
      "actionScope": null,
      "attribution": "via render form",
      "channel": "inline",
      "diagnosis": null,
      "expanded": true,
      "key": "view.tInline",
      "kind": "view",
      "label": "Showing plain content",
      "mount": {
        "channel": "inline",
        "resource": {
          "mimeType": "text/html",
          "text": "<p>form</p>",
          "uri": "ui://forms/1",
        },
      },
      "phase": "no-handshake",
      "toolTitle": "render form",
    },
    {
      "argsPreview": null,
      "attribution": true,
      "expanded": false,
      "key": "tool.tGgui",
      "kind": "tool",
      "name": "ggui_render",
      "result": null,
      "state": "done",
      "title": "ggui render",
      "toolCallId": "tGgui",
    },
    {
      "actionScope": "ui://ggui/render/render_00000000-0000-4000-8000-300000000001/c0ffee",
      "attribution": "via ggui render",
      "channel": "locator",
      "diagnosis": null,
      "expanded": true,
      "key": "view.tGgui",
      "kind": "view",
      "label": "This view couldn't start",
      "mount": {
        "channel": "locator",
        "resourceUri": "ui://ggui/render/render_00000000-0000-4000-8000-300000000001/c0ffee",
      },
      "phase": "no-handshake",
      "toolTitle": "ggui render",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 8. aborted-mid-stream — partial kept + Stopped.; no orphaned spinner 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "go on",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": true,
      "streaming": false,
      "text": "I was saying",
    },
    {
      "argsPreview": null,
      "attribution": false,
      "expanded": false,
      "key": "tool.t9",
      "kind": "tool",
      "name": "slow_tool",
      "result": null,
      "state": "orphaned",
      "title": "slow tool",
      "toolCallId": "t9",
    },
  ],
  "recovery": null,
  "status": {
    "copy": "Stopped.",
    "detail": null,
    "key": "status",
    "kind": "status",
    "state": "aborted",
  },
}
`;

exports[`corpus > 9. history-dead-locators — the expired path beside a healthy card 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "hi again",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Welcome back.",
    },
    {
      "actionScope": "ui://ggui/render/old/1",
      "attribution": null,
      "channel": "locator",
      "diagnosis": null,
      "expanded": true,
      "key": "card.1",
      "kind": "view",
      "label": "Loading view…",
      "mount": {
        "channel": "locator",
        "resourceUri": "ui://ggui/render/old/1",
      },
      "phase": "negotiating",
      "toolTitle": null,
    },
    {
      "actionScope": null,
      "attribution": null,
      "channel": null,
      "diagnosis": null,
      "expanded": true,
      "key": "card.2",
      "kind": "view",
      "label": "This view expired",
      "mount": null,
      "phase": "expired",
      "toolTitle": null,
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 10. empty-turn — status resolves, no empty bubble 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "ping",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 11. unknown-block-storm — labeled rows; nothing blank, nothing raw in calm 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "what is this",
    },
    {
      "byteSize": 26,
      "expanded": false,
      "key": "a0.u0",
      "kind": "unknown",
      "label": "Unrecognized content",
      "raw": null,
      "typeName": "provider-raw:futurecorp",
    },
    {
      "byteSize": 26,
      "expanded": false,
      "key": "a0.u1",
      "kind": "unknown",
      "label": "Unrecognized content",
      "raw": null,
      "typeName": "provider-raw:futurecorp",
    },
    {
      "byteSize": 26,
      "expanded": false,
      "key": "a0.u2",
      "kind": "unknown",
      "label": "Unrecognized content",
      "raw": null,
      "typeName": "provider-raw:futurecorp",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 12. interleaved-media-code-citations — ordering and aggregation 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "chart + code + sources",
    },
    {
      "expanded": true,
      "key": "a0.m0",
      "kind": "media",
      "media": "image",
      "name": null,
      "presentation": "inline",
      "source": {
        "mediaType": "image/png",
        "type": "url",
        "url": "https://cdn.example/chart.png",
      },
    },
    {
      "code": "print('hi')",
      "expanded": true,
      "key": "a0.c0",
      "kind": "code",
      "language": "python",
      "wrap": false,
    },
    {
      "expanded": false,
      "key": "a0.s0",
      "kind": "citations",
      "label": "2 sources",
      "sources": [
        {
          "title": "A",
          "url": "https://a.example",
        },
        {
          "title": "B",
          "url": "https://b.example",
        },
      ],
      "style": "chips",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Sources above.",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 13. saturated-then-served — only R12 waiting, then a normal turn 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "hi",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Served after the invisible retry.",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 14. reasoning-heavy — calm collapses to one line; debug expands 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "which day?",
    },
    {
      "expanded": false,
      "key": "a0.r0",
      "kind": "reasoning",
      "label": "Thought for a moment",
      "streaming": false,
      "text": "Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… Considering all twelve constraints at length… ",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Thursday works.",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 15. tools-around-a-view — the group SPLITS at the view's position 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "pick a slot",
    },
    {
      "expanded": false,
      "failureBadge": null,
      "failureCount": 0,
      "key": "g.tool.t1",
      "kind": "tool-group",
      "label": "Ran 2 tools",
      "tools": [
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t1",
          "kind": "tool",
          "name": "prep_t1",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t1.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "prep t1",
          "toolCallId": "t1",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t2",
          "kind": "tool",
          "name": "prep_t2",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t2.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "prep t2",
          "toolCallId": "t2",
        },
      ],
    },
    {
      "argsPreview": null,
      "attribution": true,
      "expanded": false,
      "key": "tool.t3",
      "kind": "tool",
      "name": "ggui_render",
      "result": null,
      "state": "done",
      "title": "ggui render",
      "toolCallId": "t3",
    },
    {
      "actionScope": null,
      "attribution": "via ggui render",
      "channel": "inline",
      "diagnosis": null,
      "expanded": true,
      "key": "view.t3",
      "kind": "view",
      "label": "Loading view…",
      "mount": {
        "channel": "inline",
        "resource": {
          "mimeType": "text/html",
          "text": "<div>picker</div>",
          "uri": "ui://cards/slot-picker",
        },
      },
      "phase": "negotiating",
      "toolTitle": "ggui render",
    },
    {
      "expanded": false,
      "failureBadge": null,
      "failureCount": 0,
      "key": "g.tool.t4",
      "kind": "tool-group",
      "label": "Ran 2 tools",
      "tools": [
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t4",
          "kind": "tool",
          "name": "post_t4",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t4.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "post t4",
          "toolCallId": "t4",
        },
        {
          "argsPreview": null,
          "attribution": false,
          "expanded": false,
          "key": "tool.t5",
          "kind": "tool",
          "name": "post_t5",
          "result": {
            "byteCount": 2,
            "expanded": true,
            "key": "tool.t5.result",
            "kind": "data-result",
            "preview": "ok",
            "showBytes": false,
            "state": "small",
          },
          "state": "done",
          "title": "post t5",
          "toolCallId": "t5",
        },
      ],
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 16. user-send-failure — R0 failed with retry; the message never disappears 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": true,
      "state": "failed",
      "text": "did this go through?",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 19. persisted-plus-live — the fold owns its trailing turns; the prefix stays flat; overlapping cards dedupe 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "plan my trip",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Here are some options.",
    },
    {
      "expanded": true,
      "key": "u1",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "book the second one",
    },
    {
      "expanded": true,
      "key": "a1.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Booked the second option.",
    },
    {
      "argsPreview": null,
      "attribution": true,
      "expanded": false,
      "key": "tool.tA",
      "kind": "tool",
      "name": "ggui_render",
      "result": null,
      "state": "done",
      "title": "ggui render",
      "toolCallId": "tA",
    },
    {
      "actionScope": "ui://ggui/render/render_00000000-0000-4000-8000-300000000001/c0ffee",
      "attribution": "via ggui render",
      "channel": "locator",
      "diagnosis": null,
      "expanded": true,
      "key": "view.tA",
      "kind": "view",
      "label": "Loading view…",
      "mount": {
        "channel": "locator",
        "resourceUri": "ui://ggui/render/render_00000000-0000-4000-8000-300000000001/c0ffee",
      },
      "phase": "negotiating",
      "toolTitle": "ggui render",
    },
    {
      "expanded": true,
      "key": "u2",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "now move it to Thursday",
    },
    {
      "argsPreview": null,
      "attribution": false,
      "expanded": false,
      "key": "tool.tB",
      "kind": "tool",
      "name": "load_booking",
      "result": {
        "byteCount": 6,
        "expanded": true,
        "key": "tool.tB.result",
        "kind": "data-result",
        "preview": "loaded",
        "showBytes": false,
        "state": "small",
      },
      "state": "done",
      "title": "load booking",
      "toolCallId": "tB",
    },
    {
      "actionScope": "ui://ggui/render/old/1",
      "attribution": null,
      "channel": "locator",
      "diagnosis": null,
      "expanded": true,
      "key": "card.1",
      "kind": "view",
      "label": "Loading view…",
      "mount": {
        "channel": "locator",
        "resourceUri": "ui://ggui/render/old/1",
      },
      "phase": "negotiating",
      "toolTitle": null,
    },
  ],
  "recovery": null,
  "status": {
    "copy": "Using check calendar…",
    "detail": null,
    "key": "status",
    "kind": "status",
    "state": "using-tool",
  },
}
`;

exports[`corpus > 20. hitl-grant-modes — the persisted declaration renders; answers echo; cancelled re-asks (draft.2) 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "book my usual seat",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "I can remember this preference.",
    },
    {
      "ask": {
        "askId": "ask-remember-1",
        "grantModes": [
          {
            "description": "Keep it for every future chat",
            "id": "m.durable",
            "label": "Always",
          },
          {
            "id": "m.scoped",
            "label": "Just this chat",
          },
        ],
        "kind": "approval",
        "message": "Remember your seating preference?",
        "requestState": "rs-bytes-1",
      },
      "askKind": "approval",
      "chosenModeId": null,
      "chosenModeLabel": null,
      "expanded": true,
      "grantModes": [
        {
          "description": "Keep it for every future chat",
          "id": "m.durable",
          "label": "Always",
        },
        {
          "id": "m.scoped",
          "label": "Just this chat",
        },
      ],
      "key": "p.ask-remember-1",
      "kind": "prompt",
      "message": "Remember your seating preference?",
      "oauth": null,
      "promptId": "ask-remember-1",
      "promptKind": "hitl",
      "raw": null,
      "state": "pending",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 21. notice-rows — both arrival paths render labeled, never agent-voiced (draft.2) 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "n0",
      "kind": "notice",
      "source": "adapter",
      "sourceLabel": null,
      "text": "Session resumed on a new device",
    },
    {
      "expanded": true,
      "key": "nf0",
      "kind": "notice",
      "source": "framework",
      "sourceLabel": null,
      "text": "Model fell back to concise mode",
    },
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "hi",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Done.",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 22. promoted-view — the stage's mount chips (guuey#204); others stay; no/stale key = no-op 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "show me two cards",
    },
    {
      "argsPreview": null,
      "attribution": true,
      "expanded": false,
      "key": "tool.t1",
      "kind": "tool",
      "name": "ggui_render",
      "result": null,
      "state": "done",
      "title": "ggui render",
      "toolCallId": "t1",
    },
    {
      "actionScope": null,
      "attribution": "via ggui render",
      "channel": "inline",
      "diagnosis": null,
      "expanded": true,
      "key": "view.t1",
      "kind": "view",
      "label": "Loading view…",
      "mount": {
        "channel": "inline",
        "resource": {
          "mimeType": "text/html",
          "text": "<div>t1</div>",
          "uri": "ui://cards/t1",
        },
      },
      "phase": "negotiating",
      "toolTitle": "ggui render",
    },
    {
      "argsPreview": null,
      "attribution": true,
      "expanded": false,
      "key": "tool.t2",
      "kind": "tool",
      "name": "ggui_render",
      "result": null,
      "state": "done",
      "title": "ggui render",
      "toolCallId": "t2",
    },
    {
      "expanded": false,
      "key": "view.t2",
      "kind": "viewRef",
      "label": "ggui render — on canvas",
      "title": "ggui render",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 23. meta-less-locator — a \`_meta\`-withholding producer's render still mounts (as a locator), never dark (guuey#209) 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "render a slot picker",
    },
    {
      "argsPreview": null,
      "attribution": true,
      "expanded": false,
      "key": "tool.t1",
      "kind": "tool",
      "name": "ggui_render",
      "result": null,
      "state": "done",
      "title": "ggui render",
      "toolCallId": "t1",
    },
    {
      "actionScope": "ui://ggui/render/render_dark/h1",
      "attribution": "via ggui render",
      "channel": "locator",
      "diagnosis": null,
      "expanded": true,
      "key": "view.t1",
      "kind": "view",
      "label": "Loading view…",
      "mount": {
        "channel": "locator",
        "resourceUri": "ui://ggui/render/render_dark/h1",
      },
      "phase": "negotiating",
      "toolTitle": "ggui render",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 24. prod-wire-ggui-render — ggui's production posture: no _meta, no uiData, a structuredContent locator → mounts as a locator (guuey#209) 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "show me the board",
    },
    {
      "argsPreview": null,
      "attribution": true,
      "expanded": false,
      "key": "tool.t1",
      "kind": "tool",
      "name": "ggui_render",
      "result": null,
      "state": "done",
      "title": "ggui render",
      "toolCallId": "t1",
    },
    {
      "actionScope": "ui://ggui/render/render_5d11b1b4-75ba-44e5-81bb-0b420b86bb8e/7328555b44e72bd7",
      "attribution": "via ggui render",
      "channel": "locator",
      "diagnosis": null,
      "expanded": true,
      "key": "view.t1",
      "kind": "view",
      "label": "Loading view…",
      "mount": {
        "channel": "locator",
        "resourceUri": "ui://ggui/render/render_5d11b1b4-75ba-44e5-81bb-0b420b86bb8e/7328555b44e72bd7",
      },
      "phase": "negotiating",
      "toolTitle": "ggui render",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "Here is your board.",
    },
  ],
  "recovery": null,
  "status": null,
}
`;

exports[`corpus > 25. oauth-auth-ask — kind:auth + authConfig oauth2 plans as the SAME hitl card with an oauth arm; a mode pick is a link, not an answer (guuey#178) 1`] = `
{
  "items": [
    {
      "expanded": true,
      "key": "u0",
      "kind": "user",
      "retry": false,
      "state": "sent",
      "text": "what's on my Linear board?",
    },
    {
      "expanded": true,
      "key": "a0.t0",
      "kind": "text",
      "markdown": true,
      "stopped": false,
      "streaming": false,
      "text": "I can't reach Linear yet.",
    },
    {
      "ask": {
        "askId": "mcp-oauth:app_1:linear:thread-oauth",
        "authConfig": {
          "authorizationUrl": "https://mcp.dev.sandbox.guuey.com/oauth/start?state=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
          "scheme": "oauth2",
        },
        "expiresAt": "2026-08-17T10:10:00.000Z",
        "grantModes": [
          {
            "description": "Every conversation with this agent",
            "id": "always",
            "label": "Always allow",
          },
          {
            "description": "Only this conversation",
            "id": "once",
            "label": "Allow this chat",
          },
        ],
        "kind": "auth",
        "message": "Trip Planner wants to use your Linear account",
        "metadata": {
          "appId": "app_1",
          "expiresAt": "2026-08-17T10:10:00.000Z",
          "serverName": "linear",
        },
      },
      "askKind": "auth",
      "chosenModeId": null,
      "chosenModeLabel": null,
      "expanded": true,
      "grantModes": [
        {
          "description": "Every conversation with this agent",
          "id": "always",
          "label": "Always allow",
        },
        {
          "description": "Only this conversation",
          "id": "once",
          "label": "Allow this chat",
        },
      ],
      "key": "p.mcp-oauth:app_1:linear:thread-oauth",
      "kind": "prompt",
      "message": "Trip Planner wants to use your Linear account",
      "oauth": {
        "authorizationUrl": "https://mcp.dev.sandbox.guuey.com/oauth/start?state=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "scopes": [],
      },
      "promptId": "mcp-oauth:app_1:linear:thread-oauth",
      "promptKind": "hitl",
      "raw": null,
      "state": "pending",
    },
  ],
  "recovery": null,
  "status": null,
}
`;
